[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "PyIBIS-AMI"
description = "Facilitates working directly with IBIS-AMI DLLs from the Python command prompt."
version = "4.0.6"
authors = [ {name = "David Banas",     email = "capn.freako@gmail.com"}
          , {name = "David Patterson"}
          ]
urls = { documentation = "https://github.com/capn-freako/PyAMI/wiki" }
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD"}
dependencies = [
        "chaco==5.1.0",
        "click==8.1.3",
        "empy==3.3.4",
        "enable==5.3.1",
        "matplotlib==3.6.1",
        "numpy>=1.23,<1.24",
        "parsec>=3.15",
        "scipy>=1.9",
        "traits>=6.4",
        "traitsui>=7.4",
]
keywords=["ibis-ami"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Emulators",
    "Topic :: Utilities",
]

[project.scripts]
ami-config = "pyibisami.ami.config:main"
run-tests = "pyibisami.tools.run_tests:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-vv"
xfail_strict=true

[tool.pylint.master]
fail-under = 9.0

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "line-too-long",
]

[tool.pylint.format]
max-line-length = 119

[tool.pydocstyle]
ignore = [
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
