[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyibis-ami"
description = "Facilitates working directly with IBIS-AMI DLLs from the Python command prompt."
version = "7.2.4"
authors = [ {name = "David Banas",     email = "capn.freako@gmail.com"}
          ]
readme = "README.md"
requires-python = ">=3.10,<3.13"
# license = "BSD-3-Clause"
dependencies = [
    "chaco>=6.0.0",
    "click>=8.1.3",
    "empy>=3.3.4",
    "importlib_resources",
    "matplotlib>=3.6.1",
    "numpy>=1.26,<1.27",
    "papermill",
    "parsec>=3.15",
    "scipy>=1.9",
]
keywords=["ibis-ami"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Emulators",
    "Topic :: Utilities",
]

[project.urls]
Documentation = "https://pyibis-ami.readthedocs.io/en/latest/"
Wiki = "https://github.com/capn-freako/PyAMI/wiki"
GitHub = "https://github.com/capn-freako/PyAMI"
PyPi = "https://pypi.org/project/PyIBIS-AMI/"

[project.scripts]
ami-config = "pyibisami.ami.config:main"
run-tests = "pyibisami.tools.run_tests:main"
run-notebook = "pyibisami.tools.run_notebook:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pyibisami" = ['*.ipynb']

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-vv"
xfail_strict=true

[tool.pylint.master]
fail-under = 9.0

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "line-too-long",
]

[tool.pylint.format]
max-line-length = 119

[tool.pydocstyle]
ignore = [
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
]

[[tool.mypy.overrides]]
module = [
    "chaco.*",
    "click.*",
    "em.*",
    "enable.*",
    "numpy.*",
    "parsec.*",
    "pyface.*",
    "scipy.*",
    "skrf.*",
    "traits.*",
    "traitsui.*"
]
ignore_missing_imports = true
